# libc

./: .gitignore  README  config.sub
libgloss/libnosys/: gettod.c
newlib/: configure.host
newlib/libc/: saber
newlib/libc/include/: err.h  fts.h  grp.h  paths.h  signal.h  stdio.h  time.h
newlib/libc/include/sys/: _default_fcntl.h  _timespec.h  _timeval.h  _types.h  config.h  errno.h  features.h  queue.h  signal.h  stat.h  syslimits.h  time.h  timeb.h  types.h  unistd.h  wait.h
newlib/libc/stdio/: getdelim.c  getline.c
newlib/libc/string/: strerror.c
newlib/libc/sys/: configure  configure.in
newlib/libc/sys/pml/: Makefile.am  Makefile.in  configure  crt0.S  errno.c  fts.c  sigset.c  sysconf.c  syswrap.c  termios.c  usyscall.S
newlib/libc/sys/pml/sys/: dirent.h  ioctl.h  mman.h  mount.h  random.h  resource.h  statvfs.h  sysmacros.h  termios.h  utime.h  utmp.h  utsname.h  wait.h
newlib/libc/time/: Makefile.am  Makefile.in  local.h  mktime.c  timegm.c
newlib/libc/unix/: getpwent.c
